--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-hyperlink": "0.0.14",
     "react-navigation": "^3.3.2"
   },
   "devDependencies": {
